@startuml

title Shop database - Customers and suppliers

!include ./_common.puml

enum ActiveStatusEnum {
    active
    inactive
    deleted
}

entity Customer {
    * id: int
    --
    * name: string(255)
    lastName: string(255)?
    phone: string(255)?
    email: string(255)?
    comment: text?
    * status: ActiveStatusEnum
    * createdAt: DateTimeImmutable
    * updatedAt: DateTimeImmutable
    deletedAt: DateTimeImmutable?
    * store: Store
    createdBy: User?
    updatedBy: User?
}

entity Supplier {
    * id: int
    --
    * name: string(255)
    phone: string(255)?
    email: string(255)?
    comment: text?
    * status: ActiveStatusEnum
    * createdAt: DateTimeImmutable
    * updatedAt: DateTimeImmutable
    deletedAt: DateTimeImmutable?
    * store: Store
    createdBy: User?
    updatedBy: User?
}

entity CustomerLabel {
    * id: int
    --
    * code: string(50)
    * name: string(255)
    color: string(32)?
    * sortOrder: int
    * status: ActiveStatusEnum
    * createdAt: DateTimeImmutable
    * updatedAt: DateTimeImmutable
    deletedAt: DateTimeImmutable?
    * store: Store
    createdBy: User?
    updatedBy: User?
}

entity customer_customer_label {
    * customer_id: int
    * customer_label_id: int
}


Store ||--o{ Customer : has customers
Store ||--o{ Supplier : has suppliers
Store ||--o{ CustomerLabel : has labels
Customer ||--o{ customer_customer_label
CustomerLabel ||--o{ customer_customer_label
Customer |o--o{ Order : places
Supplier |o--o{ Purchase : supplies

note right of Customer
  Unique suggestion:
  (store_id, phone) where phone is not null
  (store_id, email) where email is not null

  Order keeps customer snapshots so old orders do not change
  after editing Customer data.
end note

note right of Supplier
  Unique suggestion:
  (store_id, name)

  Purchase keeps supplier snapshots so old purchase documents do not change
  after editing Supplier data.
end note

note bottom of CustomerLabel
  Internal labels (never shown to the customer).
  Per-store dictionary, many-to-many with Customer.

  Unique:
  (store_id, code) where deleted_at is null
end note

@enduml
